Wed Aug  7 15:00:13 1996  Kevin Layer  <layer@freezer>

	* fi-modes.el: handle the # in (in-package #:foo), which
	previously caused the mode hooks, etc, not to be run.

Thu Aug  1 21:38:59 1996  Kevin Layer  <layer@freezer>

	* fi-subproc.el: fix bug introduced while reducing the number of
	special variables.

Thu Aug  1 15:34:55 1996  Kevin Layer  <layer@freezer>

	* change rcs Header to Id

	* Makefile: don't run `docs' rule, since it's broken; test
	`updates' rule that uses `rsync' (which itself doesn't work yet)

Thu Aug  1 13:10:38 1996  Kevin Layer  <layer@freezer>

	* fi-compile.el: set byte-compile-compatibility for
	xemacs/emacs compat

	* local-fi-developer-hooks.el: add-hook on c++-mode-hook, too

Tue Jul 30 07:24:12 1996  Kevin Layer  <layer@freezer>

	* fi-lep.el: defontify in lep::buffer-region
	* local-fi-developer-hooks.el: fix use of push-mark for Xemacs

Thu Jun 27 16:56:49 1996  Kevin Layer  <layer@freezer>

	* Makefile: revamp to make some compilation warnings go away (load all
	sources before compiling anything)
	* fi-compile.el: used by Makefile
	* fi-basic-lep.el: lep::handle-query is used (I checked lisp, too)
	* Doc.el: make some compiler warnings go away
	* fi-changes.el: make some compiler warnings go away (don't use
	specials to pass info from one function to another, use
	arguments); unlock-file-suffix is a local feature, rename to
	fi::unlock-file-suffix and set to `nil' effectively disabling this
	feature
	* fi-clman.el: make some compiler warnings go away
	* fi-dmode.el: make some compiler warnings go away
	* fi-emacs19.el: make some compiler warnings go away
	* fi-gnu.el: fi::backup-extract-version not used
	* fi-keys.el: make some compiler warnings go away
	* fi-leep-xemacs.el: syntax error in doc string
	* fi-lep.el: make some compiler warnings go away
	* fi-site-init.el: local hacks (fi::load-el-files-only)
	* fi-subproc.el: make some compiler warnings go away
	* fi-telnet.el: make some compiler warnings go away